[gd_scene load_steps=6 format=3 uid="uid://sur0ioip0ubr"]

[ext_resource type="Script" path="res://FocusCraft/Focus.gd" id="1_7w1du"]
[ext_resource type="PackedScene" uid="uid://docbr1dhq3udq" path="res://FocusCraft/FocusNode.tscn" id="2_thmlg"]
[ext_resource type="PackedScene" uid="uid://c46axl4piwupq" path="res://FocusLexicon/FocusSummary.tscn" id="3_fqbai"]
[ext_resource type="PackedScene" uid="uid://s4bvrxnj3b6g" path="res://FocusLexicon/SpellSummary.tscn" id="4_47nw0"]
[ext_resource type="PackedScene" uid="uid://bpl6m0rra2dmp" path="res://FocusCraft/FocusCore/ElementalCore.tscn" id="5_gkobq"]

[node name="Focus" type="Node2D"]
script = ExtResource("1_7w1du")

[node name="StartNode" parent="." instance=ExtResource("2_thmlg")]
position = Vector2(300, 300)
Node_color = Color(0, 0, 0, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="Label" type="Label" parent="."]
offset_left = 400.0
offset_top = 600.0
offset_right = 496.0
offset_bottom = 649.0

[node name="Mana" type="Label" parent="."]
offset_left = 400.0
offset_top = 620.0
offset_right = 440.0
offset_bottom = 643.0

[node name="Button" type="Button" parent="."]
offset_left = 580.0
offset_top = 600.0
offset_right = 617.0
offset_bottom = 631.0
text = "<--- "

[node name="Button2" type="Button" parent="."]
offset_left = 620.0
offset_top = 600.0
offset_right = 671.0
offset_bottom = 631.0
text = "Reset"

[node name="Button3" type="Button" parent="."]
offset_left = 676.0
offset_top = 600.0
offset_right = 730.0
offset_bottom = 631.0
text = "Shake"

[node name="FocusSummary" parent="." instance=ExtResource("3_fqbai")]
position = Vector2(672, 100)

[node name="SpellSummary" parent="." instance=ExtResource("4_47nw0")]
position = Vector2(843, 97)
FocusCore = ExtResource("5_gkobq")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
